--- a/index.html
+++ b/index.html
@@ -6,7 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Number Guessing</title>
     <link rel="shortcut icon" href="#" />
-    <style></style>
+    <style>
+      body {
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+      .replay {
+        padding: 5px;
+      }
+      button {
+        display: block;
+        border-radius: 15px;
+        font-size: 1.4em;
+        padding: 10px;
+        outline: none;
+      }
+      input {
+        font-size: 1.5em;
+        border-radius: 15px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        outline: none;
+        border-width: 5px;
+      }
+      .message {
+        font-size: 1.5em;
+      }
+    </style>
   </head>
   <body>
     <div class="output">
@@ -18,7 +47,6 @@
   <script>
     let game = { min: 1, max: 10 };
     document.addEventListener('DOMContentLoaded', () => {
-      console.log('ready');
       game.output = document.querySelector('.output');
       game.message = document.querySelector('.message');
       game.guessInput = document.querySelector('input');
@@ -27,33 +55,57 @@
       init();
     });
     function guessValue() {
-      let tempGuess = game.guessInput.value;
-      tempGuess = parseInt(tempGuess);
-      if (isNaN(tempGuess)) message('Please enter only digits', 'red');
-      else if (tempGuess === game.num) {
-        message('Correct you guessed ' + game.num, 'green');
-        game.guessInput.style.borderColor = 'green';
+      if (game.btn.classList.contains('replay')) {
+        init();
+        game.guesses = 0;
+        game.num = ranNumber(game.min, game.max);
+        game.btn.innerHTML = 'Guess';
+        game.guessInput.style.display = 'flex';
+        game.btn.classList.remove('replay');
       } else {
-        let holder =
-          tempGuess > game.num
-            ? { m: 'Was lower', c: 'blue' }
-            : { m: 'Was Higher', c: 'purple' };
-        message(holder.m, holder.c);
+        game.guesses++;
+        let tempGuess = game.guessInput.value;
+        game.guessInput.value = '';
+        tempGuess = parseInt(tempGuess);
+        if (isNaN(tempGuess)) message('Please enter only digits', 'red');
+        else if (tempGuess === game.num) {
+          message(
+            'Correct you guessed ' +
+              game.num +
+              ' in ' +
+              game.guesses +
+              ' guesses.',
+            'green'
+          );
+          gameOver();
+        } else {
+          let holder =
+            tempGuess > game.num
+              ? { m: 'Was lower', c: 'blue' }
+              : { m: 'Was Higher', c: 'purple' };
+          message(holder.m, holder.c);
+        }
       }
-      console.log('Your guess is ' + game.guessInput.value);
+    }
+    function gameOver() {
+      game.btn.innerHTML = 'Restart Game';
+      game.guessInput.style.display = 'none';
+      game.btn.classList.add('replay');
+      game.max += 5;
     }
     function init() {
+      game.guesses = 0;
       game.num = ranNumber(game.min, game.max);
-      let tempMes =
-        'Welcome to the game. Guess a number from ' +
-        game.min +
-        ' to ' +
-        game.max;
+      let tempMes = 'Guess a number from ' + game.min + ' to ' + game.max;
       message(tempMes, 'blue');
+      // console.log(game);
     }
     function message(mes, clr) {
       game.message.innerHTML = mes;
       game.message.style.color = clr || '#000';
+      game.guessInput.style.borderColor = clr || '#000';
+      game.btn.style.backgroundColor = clr || '#000';
+      game.btn.style.color = '#fff';
     }
     function ranNumber(min, max) {
       return Math.floor(Math.random() * (max - min + 1) + min);
