--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         margin-bottom: 5px;
         outline: none;
         border-width: 5px;
+        border: solid;
       }
       .message {
         font-size: 1.5em;
